update registration form to include country and mobile number input

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -22,6 +22,9 @@
   "item-3": "Item 3",
   "your-name": "Your name",
   "your-email": "Your email",
+  "mobile-number": "Mobile Number",
+  "country": "Country",
+  "your-mobile-number": "Your Mobile Number",
   "save-changes": "Save Changes",
   "successfully-updated": "Account has been successfully updated.",
   "all-teams": "All Teams",
