--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -100,6 +100,9 @@
   "new-photo": "Select New Photo",
   "add-profile-picture": "Add a profile picture",
   "dashboard": "Dashboard",
+  "insights": "Insights",
+  "transcripts": "Transcripts",
+  "languages": "Languages",
   "teams": "Teams",
   "account": "Account",
   "password": "Password",
@@ -176,5 +179,5 @@
   "no-credentials": "No credentials found.",
   "confirm-email": "Confirm your email address",
   "confirm-email-description": "Please click the verification link sent to your email to activate your account.",
-  "allow-only-work-email": "Please use your work email to create an account."
+  "allow-only-work-email": "Please use your work email to create an account.",
 }
