--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -179,5 +179,5 @@
   "no-credentials": "No credentials found.",
   "confirm-email": "Confirm your email address",
   "confirm-email-description": "Please click the verification link sent to your email to activate your account.",
-  "allow-only-work-email": "Please use your work email to create an account.",
+  "allow-only-work-email": "Please use your work email to create an account."
 }
