fix(CreateLang.tsx): import Textarea component from 'react-daisyui' to allow multiline input for description field fix(CreateLang.tsx): change heading text from 'create-team' to 'create-lang' for better clarity fix(CreateLang.tsx): change button text from 'members-of-a-team' to 'lang-form-desc' for better clarity fix(CreateLang.tsx): change link href from '/lang/${team.name}/members' to '/lang/${team.name}/transcripts' for better routing fix(Langs.tsx): change component name from 'Langs' to 'Languages' for better naming convention fix(Langs.tsx): change heading text from 'all-teams' to 'all-lang' for better clarity fix(Langs.tsx): change th text from 'members' to 'description' for better clarity fix(Langs.tsx): change th text from 'transcripts' to 'transcripts' for better clarity fix(Langs.tsx): change th text from 'created-at' to 'created-at' for better clarity fix(Langs.tsx): change th text from 'actions' to 'actions' for better clarity fix(Langs.tsx): change td text from 'members' to 'team.name' for better clarity fix(Langs.tsx): change td text from 'team.description' to 'team.description' for better clarity fix(Langs.tsx): change th text from 'members' to 'transcripts' for better clarity fix(Langs.tsx): change td text from 'team.description' to 'team.transcripts?.length.toString()' for better clarity fix(Langs.tsx): change th text from 'members' to 'description' for better clarity fix(Langs.tsx): change td text from 'team.description' to 'team.description' for better clarity fix(Langs.tsx): change th text from 'members' to 'transcripts' for better clarity fix(Langs.tsx): change td text from 'team.description' to 'team.transcripts?.length.toString()' for better clarity fix(Langs.tsx): change th text from 'members' to 'description' for better clarity fix(Langs.tsx): change td text from 'team.description' to 'team.description' for better clarity fix(Langs.tsx): change th text from 'members' to 'transcripts' for better clarity fix(Langs.tsx):

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -45,9 +45,14 @@
   "choose-team": "Choose your team",
   "allow-team": "Allow team members to login using an Identity Provider.",
   "members-of-a-team": "Members of a team have access to specific areas, such as a new languages or a new transcriptions projects.",
+  "lang-form-desc": "Create a new Language",
+  "delete-lang": "Delete",
   "accept-invite": "You can accept the invitation to join the team by clicking the button below.",
   "invite-create-account": "To continue, you must either create a new account or login to an existing account.",
   "no-active-team": "You do not have any active team.",
+  "delete-lang-confirmation": "You are about to delete a language, all the transcripts linked to it will be lost.",
+  "delete-lang-success": "Success.",
+  "delete-lang-error": "Something went wrong while deleting the language. Please try again later.",
   "coming-soon": "Coming Soon",
   "provision": "Provision and de-provision users with your directory provider.",
   "name": "Name",
@@ -98,6 +103,10 @@
   "forgot-password": "Forgot Your Password?",
   "password-updated": "Password updated successfully.",
   "new-photo": "Select New Photo",
+  "all-lang": "All Languages",
+  "create-lang": "Add new Language",
+  "lang-name": "Name",
+  "lang-description": "Description",
   "add-profile-picture": "Add a profile picture",
   "dashboard": "Dashboard",
   "insights": "Insights",
