fix(CreateLang.tsx): update toast success message key from 'team-created' to 'lang-created' for better accuracy fix(Sidebar.tsx): update href values for 'transcripts', 'insights', 'settings' to '/' for correct routing fix(Sidebar.tsx): update href value for 'languages' to '/teams/${slug}/settings' for correct routing feat(common.json): add new translation key 'lang-created' with value 'Language created successfully.' fix(dashboard.tsx): remove unnecessary code for redirecting based on user role fix(language.tsx): uncomment CreateLang component and pass visible and setVisible props for rendering fix(language.tsx): rename Langs to Language for better naming consistency fix(schema.prisma): update datasource url to use 'DATABASE_URL' environment variable instead of 'POSTGRES_PRISMA_URL'

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -40,6 +40,7 @@
   "remove-team": "Remove Team",
   "remove-team-warning": "Deleting the team will delete all resources and data associated with the team forever. This action cannot be undone.",
   "team-created": "Team created successfully.",
+  "lang-created": "Language created successfully.",
   "leave-team": "Leave Team",
   "leave-team-success": "You have left the team successfully.",
   "choose-team": "Choose your team",
