--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -37,6 +37,8 @@
   "invite-member-message": "Invite new member by email to join your organization.",
   "accept-invitation": "Accept invitation",
   "create-team": "Create Team",
+  "all-transcripts": "Transcripts",
+  "create-transcript": "Create Transcript",
   "remove-team": "Remove Team",
   "remove-team-warning": "Deleting the team will delete all resources and data associated with the team forever. This action cannot be undone.",
   "team-created": "Team created successfully.",
