--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -44,6 +44,7 @@
   "team-created": "Team created successfully.",
   "lang-created": "Language created successfully.",
   "leave-team": "Leave Team",
+  "delete-transcript": "Delete transcript",
   "leave-team-success": "You have left the team successfully.",
   "choose-team": "Choose your team",
   "allow-team": "Allow team members to login using an Identity Provider.",
