--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -37,8 +37,8 @@
   "invite-member-message": "Invite new member by email to join your organization.",
   "accept-invitation": "Accept invitation",
   "create-team": "Create Team",
-  "all-transcripts": "Transcripts",
-  "create-transcript": "Create Transcript",
+  "all-transcripts": "Tasks",
+  "create-transcript": "Create Task",
   "remove-team": "Remove Team",
   "remove-team-warning": "Deleting the team will delete all resources and data associated with the team forever. This action cannot be undone.",
   "team-created": "Team created successfully.",
@@ -54,7 +54,7 @@
   "accept-invite": "You can accept the invitation to join the team by clicking the button below.",
   "invite-create-account": "To continue, you must either create a new account or login to an existing account.",
   "no-active-team": "You do not have any active team.",
-  "delete-lang-confirmation": "You are about to delete a language, all the transcripts linked to it will be lost.",
+  "delete-lang-confirmation": "You are about to delete a language, all the tasks linked to it will be lost.",
   "delete-lang-success": "Success.",
   "delete-lang-error": "Something went wrong while deleting the language. Please try again later.",
   "coming-soon": "Coming Soon",
@@ -114,7 +114,8 @@
   "add-profile-picture": "Add a profile picture",
   "dashboard": "Dashboard",
   "insights": "Insights",
-  "transcripts": "Transcripts",
+  "transcripts": "Tasks",
+  "task-lang": "Language",
   "languages": "Languages",
   "teams": "Teams",
   "account": "Account",
