--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -38,7 +38,7 @@
   "accept-invitation": "Accept invitation",
   "create-team": "Create Team",
   "all-transcripts": "Tasks",
-  "create-transcript": "Create Task",
+  "create-transcript": "Add new",
   "remove-team": "Remove Team",
   "remove-team-warning": "Deleting the team will delete all resources and data associated with the team forever. This action cannot be undone.",
   "team-created": "Team created successfully.",
