--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -128,6 +128,9 @@
   "api-keys": "API Keys",
   "team": "Team",
   "team-name": "Team Name",
+  "task-name": "Name",
+  "task-type": "Type",
+  "select-lang": "Select the language",
   "update-account": "Update Account",
   "update-password": "Update Password",
   "current-password": "Current Password",
