fix transcript filesupload issue

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -37,18 +37,18 @@
   "invite-member-message": "Invite new member by email to join your organization.",
   "accept-invitation": "Accept invitation",
   "create-team": "Create Team",
-  "all-transcripts": "Tasks",
-  "create-transcript": "Add new",
+  "all-tasks": "Tasks",
+  "create-task": "Add new",
   "remove-team": "Remove Team",
   "remove-team-warning": "Deleting the team will delete all resources and data associated with the team forever. This action cannot be undone.",
   "team-created": "Team created successfully.",
   "lang-created": "Language created successfully.",
   "leave-team": "Leave Team",
-  "delete-transcript": "Delete transcript",
+  "delete-task": "Delete task",
   "leave-team-success": "You have left the team successfully.",
   "choose-team": "Choose your team",
   "allow-team": "Allow team members to login using an Identity Provider.",
-  "members-of-a-team": "Members of a team have access to specific areas, such as a new languages or a new transcriptions projects.",
+  "members-of-a-team": "Members of a team have access to specific areas, such as a new languages or a new projects.",
   "lang-form-desc": "Create a new Language",
   "delete-lang": "Delete",
   "accept-invite": "You can accept the invitation to join the team by clicking the button below.",
@@ -114,7 +114,7 @@
   "add-profile-picture": "Add a profile picture",
   "dashboard": "Dashboard",
   "insights": "Insights",
-  "transcripts": "Tasks",
+  "tasks": "Projects",
   "task-lang": "Language",
   "languages": "Languages",
   "teams": "Teams",
