fix transcript and lang upload

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -37,7 +37,7 @@
   "invite-member-message": "Invite new member by email to join your organization.",
   "accept-invitation": "Accept invitation",
   "create-team": "Create Team",
-  "all-tasks": "Tasks",
+  "all-tasks": "Projects",
   "create-task": "Add new",
   "remove-team": "Remove Team",
   "remove-team-warning": "Deleting the team will delete all resources and data associated with the team forever. This action cannot be undone.",
