feat(files): add new component for displaying files in a task fix(useTask.ts): specify return type of useTask hook to improve type safety feat(common.json): add new translations for file-related actions fix(invitations.ts): remove unnecessary call to assignTranscriberToTask function feat(files.tsx): use new AllFiles component to display files in a task feat(transcripts.tsx): update button text to "Add new transcript"

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -20,6 +20,13 @@
   "continue-with-saml-sso": "Continue with SAML SSO",
   "send-magic-link": "Send Magic Link",
   "item-3": "Item 3",
+  "fileFormat": "Format",
+  "new-file-import": "Import new File",
+  "add-new-transcriber": "Invite transcriber",
+  "download-all": "Download all Files",
+  "add-new-transcript": "Add new transcript",
+  "all-transcripts": "Transcripts",
+  "task-settings": "Project Details",
   "your-name": "Your name",
   "your-email": "Your email",
   "mobile-number": "Mobile Number",
