refactor(files): update confirmation dialog title and content to improve clarity and consistency feat(common.json): add new translations for deleting audio files and confirmation message
The confirmation dialog in the files component was updated to have a more appropriate title and content. The title was changed from "Revoke API Key" to "Delete audio file" to accurately reflect the action being performed. The confirmation message was also changed from "Revoke API Key Confirm" to "Delete file confirm" to provide a clearer message to the user.

In the common.json file, two new translations were added. "delete-file" was added as a translation for "Delete audio file" to be used as the new title for the confirmation dialog. "delete-file-confirm" was added as a translation for the confirmation message asking the user if they are sure they want to delete the file. This message also informs the user that the action cannot be undone.

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -176,6 +176,8 @@
   "revoke": "Revoke",
   "cancel": "Cancel",
   "revoke-api-key": "Revoke API Key",
+  "delete-file": "Delete audio file",
+  "delete-file-confirm": "Are you sure you want to delete this file? This action can not be undone.",
   "active": "Active",
   "no-api-key-title": "You haven't created any API Keys yet",
   "no-api-key-description": "API Keys allow your app to communicate with app",
