--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -45,13 +45,13 @@
   "accept-invitation": "Accept invitation",
   "create-team": "Create Team",
   "all-tasks": "Projects",
-  "create-task": "Add new",
+  "create-task": "Create Project",
   "remove-team": "Remove Team",
   "remove-team-warning": "Deleting the team will delete all resources and data associated with the team forever. This action cannot be undone.",
   "team-created": "Team created successfully.",
   "lang-created": "Language created successfully.",
   "leave-team": "Leave Team",
-  "delete-task": "Delete task",
+  "delete-task": "Delete Project",
   "leave-team-success": "You have left the team successfully.",
   "choose-team": "Choose your team",
   "allow-team": "Allow team members to login using an Identity Provider.",
@@ -122,8 +122,9 @@
   "dashboard": "Dashboard",
   "insights": "Insights",
   "tasks": "Projects",
-  "task-lang": "Language",
+  "language": "Language",
   "languages": "Languages",
+  "status-description": "",
   "teams": "Teams",
   "account": "Account",
   "password": "Password",
@@ -156,6 +157,7 @@
   "team-members": "Team Members",
   "team-connections": "Team SSO Connections",
   "member-role-updated": "Member role updated successfully.",
+  "status": "Status",
   "member-deleted": "Member deleted successfully.",
   "file-deleted": "File deleted successfully.",
   "transcriber-deleted": "Transcriber removed successfully.",
@@ -192,6 +194,7 @@
   "remove-team-confirmation": "Are you sure you want to delete the team? Deleting the team will delete all resources and data associated with the team forever.",
   "team-removed-successfully": "Team removed successfully.",
   "leave-team-confirmation": "Are you sure you want to leave the team? You'll lose access to all resources and data associated with the team.",
+  "delete-task-confirmation": "Are you sure you want to delete this project? You'll lose access to all resources and data associated with the project.",
   "all-products": "All Products",
   "new-team": "New Team",
   "profile": "Profile",
