fix(files): update empty state titles and descriptions to be more specific and relevant feat(common.json): add new translations for empty state titles and descriptions for files component

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -187,6 +187,8 @@
   "active": "Active",
   "no-api-key-title": "You haven't created any API Keys yet",
   "no-api-key-description": "API Keys allow your app to communicate with app",
+  "no-file-title": "You haven't added any files yet",
+  "no-file-description": "Add audio or txt files to your transcription project",
   "revoke-api-key-confirm": "Are you sure you want to revoke this API Key? This action can not be undone.",
   "delete": "Delete",
   "copy-to-clipboard": "Copy",
