refactor(PendingInvitations.tsx): remove unused import of Card component to improve code cleanliness and reduce bundle size feat(common.json): add new translations for "edit-transcript", "delete-transcript", "transcripts" to improve localization

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -25,7 +25,10 @@
   "add-new-transcriber": "Invite transcriber",
   "download-all": "Download all Files",
   "add-new-transcript": "Add new transcript",
+  "edit-transcript": "Edit transcript",
+  "delete-transcript": "Delete transcript",
   "all-transcripts": "Transcripts",
+  "transcripts": "Transcripts",
   "task-settings": "Project Details",
   "your-name": "Your name",
   "your-email": "Your email",
