fix(RemoveTask.tsx): fix interpolation syntax for Card.Title to display translated text correctly fix(Tasks.tsx): fix href value for Link component to navigate to the correct settings page for each task feat(common.json): add translations for remove-task and remove-task-warning messages refactor(tasks.tsx): remove unused useTranslation import and t variable refactor(editor.tsx): fix import path for useTask hook refactor(settings.tsx): fix import path for useTask hook

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -51,6 +51,10 @@
   "create-task": "Create Project",
   "remove-team": "Remove Team",
   "remove-team-warning": "Deleting the team will delete all resources and data associated with the team forever. This action cannot be undone.",
+  "remove-task": "Remove Project",
+  "remove-task-warning": "Deleting the projects will delete all resources and data associated with this project forever. This action cannot be undone.",
+  "remove-task-confirmation": "You are about to delete a language, all the tasks linked to it will be lost.",
+
   "team-created": "Team created successfully.",
   "lang-created": "Language created successfully.",
   "leave-team": "Leave Team",
