feat(locales): add "Attachments" translation for the key "files" in the common.json file to improve clarity and consistency in the UI

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -144,6 +144,7 @@
   "webhooks": "Webhooks",
   "api-keys": "API Keys",
   "team": "Team",
+  "files": "Attachments",
   "team-name": "Team Name",
   "task-name": "Name",
   "task-type": "Type",
