--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -47,14 +47,18 @@
   "invite-member-message": "Invite new member by email to join your organization.",
   "accept-invitation": "Accept invitation",
   "create-team": "Create Team",
+  "browser-not-supported": "Your browser does not support the audio element.",
   "all-tasks": "Projects",
   "create-task": "Create Project",
   "remove-team": "Remove Team",
+  "transcribe-audio": "Transcribe audio",
+  "transcribe-audio-desc": "Listen to the following audio and enter the transcription below",
+  "type-the-transcription-here": "Type the transcription here",
   "remove-team-warning": "Deleting the team will delete all resources and data associated with the team forever. This action cannot be undone.",
   "remove-task": "Remove Project",
   "remove-task-warning": "Deleting the projects will delete all resources and data associated with this project forever. This action cannot be undone.",
   "remove-task-confirmation": "You are about to delete a language, all the tasks linked to it will be lost.",
- "transcript-created" : "Project created successfully",
+  "transcript-created": "Project created successfully",
   "team-created": "Team created successfully.",
   "lang-created": "Language created successfully.",
   "leave-team": "Leave Team",
