--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -160,7 +160,7 @@
   "new-password": "New Password",
   "continue-with-github": "Continue with GitHub",
   "continue-with-google": "Continue with Google",
-  "email-placeholder": "example@boxyhq.com",
+  "email-placeholder": "example@akilli.ai",
   "confirm-password": "Confirm Password",
   "enter-new-password": "Enter new password",
   "directory-name": "Directory Name",
