fix(components/files): fix indentation of actions column header in AllFiles component for better readability
feat(components/files): add support for isVoiceJob prop in CreateTranscript component to conditionally render audio controls and change modal header text

fix(components/transcripts): fix indentation and add conditional rendering of audio controls and modal header text based on isVoiceJob prop in CreateTranscript component

fix(components/transcripts): fix indentation and add conditional rendering of modal header text based on task type in AllTranscripts component

fix(locales/en/common.json): update translation keys for transcribe-sentence-desc and type-here

fix(pages/tasks/[id]/transcripts): add isVoiceJob variable to conditionally render modal header text in Transcripts page

fix(pages/teams/[slug]/tasks/[id]/transcripts): add isVoiceJob variable to conditionally render modal header text in Transcripts page

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -53,7 +53,9 @@
   "remove-team": "Remove Team",
   "transcribe-audio": "Transcribe audio",
   "transcribe-audio-desc": "Listen to the following audio and enter the transcription below",
-  "type-the-transcription-here": "Type the transcription here",
+  "transcribe-sentence-desc": "Add a new sentence to be transcribe",
+
+  "type-here": "Type here",
   "remove-team-warning": "Deleting the team will delete all resources and data associated with the team forever. This action cannot be undone.",
   "remove-task": "Remove Project",
   "remove-task-warning": "Deleting the projects will delete all resources and data associated with this project forever. This action cannot be undone.",
