--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -53,7 +53,7 @@
   "remove-team": "Remove Team",
   "transcribe-audio": "Transcribe audio",
   "transcribe-audio-desc": "Listen to the following audio and enter the transcription below",
-  "transcribe-sentence-desc": "Add a new sentence to be transcribe",
+  "transcribe-sentence-desc": "Add a new sentence to transcribe",
 
   "type-here": "Type here",
   "remove-team-warning": "Deleting the team will delete all resources and data associated with the team forever. This action cannot be undone.",
@@ -212,6 +212,7 @@
   "error-getting-audit-log-token": "Error getting audit log token. Please check your configuration.",
   "remove-team-confirmation": "Are you sure you want to delete the team? Deleting the team will delete all resources and data associated with the team forever.",
   "team-removed-successfully": "Team removed successfully.",
+  "task-removed-successfully": "Project removed successfully.",
   "leave-team-confirmation": "Are you sure you want to leave the team? You'll lose access to all resources and data associated with the team.",
   "delete-task-confirmation": "Are you sure you want to delete this project? You'll lose access to all resources and data associated with the project.",
   "all-products": "All Products",
