--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -60,7 +60,11 @@
   "remove-task": "Remove Project",
   "remove-task-warning": "Deleting the projects will delete all resources and data associated with this project forever. This action cannot be undone.",
   "remove-task-confirmation": "You are about to delete a language, all the tasks linked to it will be lost.",
-  "transcript-created": "Project created successfully",
+  "task-created": "Project created successfully",
+  "file-imported": "File imported successfully",
+  "transcript-created": "Transcription added with success",
+  "sentence-created": "Sentence added with success",
+
   "team-created": "Team created successfully.",
   "lang-created": "Language created successfully.",
   "leave-team": "Leave Team",
