--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -53,7 +53,7 @@
   "remove-team": "Remove Team",
   "transcribe-audio": "Transcribe audio",
   "transcribe-audio-desc": "Listen to the following audio and enter the transcription below",
-  "transcribe-sentence-desc": "Add a new sentence to transcribe",
+  "transcribe-sentence-desc": "Transcribe the following sentence",
 
   "type-here": "Type here",
   "remove-team-warning": "Deleting the team will delete all resources and data associated with the team forever. This action cannot be undone.",
